# xenogb

./: .gitignore  Cargo.toml  LICENSE  README.md  gen_optable.py  logging.yml
.github/workflows/: build.yml
benches/: benchmark.rs
benches/roms/: add_a_b.gb  inc_a.gb  nop.gb
src/: bus.rs  cartridge.rs  cpu.rs  dbg.rs  interrupts.rs  io.rs  io_event.rs  lib.rs  main.rs  playback.rs  ram.rs  run_emu.rs  utils.rs
src/audio/: mod.rs  run_audio.rs
src/core/: io_event.rs  macros.rs  mod.rs  playback.rs  run_emu.rs  utils.rs
src/core/cpu/: clock.rs  cpu.rs  interrupts.rs  mod.rs
src/core/cpu/instructions/: arithmetics.rs  bit.rs  control.rs  ld.rs  misc.rs  mod.rs  stack.rs
src/core/io/: joypad.rs  mod.rs  serial.rs  timer.rs
src/core/io/audio/: apu.rs  envelope.rs  length_counter.rs  mod.rs  sweep.rs
src/core/io/audio/channels/: mod.rs  noise.rs  pulse.rs  (+1 more)
src/core/io/video/: lcd.rs  ppu.rs
src/core/mem/: boot.rs  bus.rs  cartridge.rs  dma.rs  mod.rs  ram.rs
src/core/mem/mbc/: mbc1.rs  mbc3.rs  mod.rs
src/cpu/: clock.rs  cpu.rs  mod.rs
src/cpu/instructions/: arithmetics.rs  bit.rs  control.rs  ld.rs  misc.rs  mod.rs  stack.rs
src/debugger/: commands.rs  debugger.rs  disas.rs  mod.rs  state.rs
src/debugger/metrics/: cpu.rs  metric_type.rs  metrics.rs  mod.rs  ppu.rs
src/instructions/: arithmetics.rs  bit.rs  control.rs  ld.rs  misc.rs  mod.rs  stack.rs
src/io/: joypad.rs  mod.rs  ppu.rs  serial.rs  timer.rs
src/io/audio/: apu.rs  channel.rs  mod.rs
src/io/video/: lcd.rs  mod.rs  ppu.rs
src/mbc/: mbc1.rs  mod.rs
src/mem/: boot.rs  bus.rs  cartridge.rs  mod.rs  ram.rs
src/mem/mbc/: mbc1.rs  mbc3.rs  mbc5.rs  mod.rs
src/ui/: mod.rs  ui.rs
src/ui/debugger/: debugger.rs  mod.rs  repl.rs
src/ui/debugger/utils/: cache.rs  mod.rs  timedata.rs
src/ui/debugger/views/: apu.rs  cpu.rs  main.rs  mod.rs  ppu.rs  repl.rs  vram.rs
src/ui/main/: bsod.rs  mod.rs  run.rs  settings.rs  ui.rs
tests/: framework.sh  run_tests.sh  skip.list  utils.sh
tests/blarggs/: config.sh  run.sh
tests/mattcurrie/: config.sh  run.sh
tests/mooneye/: config.sh  run.sh
