[package]
name = "xenogb"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
cphf = "1.0.0"
crossbeam-channel = "0.5.14"
eframe = { version = "0.31.1", features = ["glow"] }
egui_extras = { version = "0.31.1", features = ["image"] }
egui_plot = "0.31.0"
egui_tiles = "0.12.0"
image = { version = "0.25.6", features = ["png"] }
log = "0.4.27"
log4rs = { version = "1.3.0", features = ["file_appender", "serde"] }
phf = { version = "0.11.3", features = ["macros"] }
serde = "1.0.219"
serde_yaml = "0.9.34"
signal-hook = "0.3.17"
