[package]
name = "xenogb"
license = "MIT"
version = "0.1.0"
edition = "2021"
default-run = "xenogb"

[[bench]]
name = "benchmark"
harness = false
test = false

[[bin]]
name = "generate_bench_roms"
path = "benches/bin/gen_bench_roms.rs"
test = false
bench = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
cpal = "0.15.3"
cphf = "1.0.0"
crossbeam-channel = "0.5.14"
eframe = { version = "0.31.1", features = ["glow"] }
egui_extras = { version = "0.31.1", features = ["image"] }
egui_plot = "0.31.0"
egui_tiles = "0.12.0"
image = { version = "0.25.6", features = ["png"] }
itertools = "0.14.0"
log = "0.4.27"
log4rs = { version = "1.3.0", features = ["file_appender", "serde"] }
phf = { version = "0.11.3", features = ["macros"] }
serde = "1.0.219"
serde_yaml = "0.9.34"
